--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">WaterDrop</string>
     <string name="interval">Interval (min.)</string>
     <string name="start">Start</string>
+    <string name="error_msg">Digite o Intervalo</string>
 </resources>
