Interação btn e correções

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="interval">Interval (min.)</string>
     <string name="start">Start</string>
     <string name="error_msg">Digite o Intervalo</string>
+    <string name="pause">Pause</string>
 </resources>
